compile with openjdk 17, desktop-only